--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.soerjdev.bike_shop">
    <application
-        android:label="bike_shop"
+        android:label="Bike Shop"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
